# Qt-Qml-Weather-App

./: .env.example  .gitignore  CMakeLists.txt  QtQmlWeatherApp.qmlproject  QtQmlWeatherApp.qmlproject.qtds  README.md  qmlmodules
WeatherApp/: CMakeLists.txt  WeatherApp.qmlproject  WeatherApp.qmlproject.qtds  qmlmodules
WeatherApp/content/: App.qml  ButtonTextEdit.qml  MyButton.qml  MyComponent.qml  Screen01.ui.qml
WeatherApp/imports/: CMakeLists.txt
WeatherApp/imports/WeatherApp/: CMakeLists.txt  Constants.qml  qmldir
WeatherApp/imports/WeatherApp/designer/: plugin.metainfo
WeatherApp/src/: import_qml_plugins.h
content/: App.qml  CMakeLists.txt  Screen01.ui.qml
imports/: CMakeLists.txt
imports/QtQmlWeatherApp/: CMakeLists.txt  qmldir
imports/QtQmlWeatherApp/designer/: plugin.metainfo
src/: api_config.cpp  api_config.h  import_qml_plugins.h  main.cpp
